CHANGELOG


2.0.1
GENERAL:
* introduce again travis for automatic unit testing

UTILS:
XYZ-merger | update functionality 'allowmergingwithupperlevel' - complete DG hierarchy is now checked & if Panorama DG has two/more childDG these childDG are checked and if duplicate objects are there, objects are merged into parentDG
address-merger | merge TAG before duplicate object is deleted
schedule-edit | introduce new util tool, introduce 'filter=(object is.expired)'
rule-edit | introduce 'filter=(schedule is.expired)' - example usage: pa_rule-edit in=api://IP actions=disabled-set 'filter=(schedule is.expired)'
pa_xml-issue-detecor | extend to find for source/destination if ANY and other objects are set
address-edit | extend actions=display to print tag information

BUGFIX:
PanoramaConf | fix for TagStore to set parentCentralStore at time of reading DG hierarchy - example usage pa_rule-edit actions=tag-add:TAGNAME (if TAGNAME is defined NOT at shared but at parent DG)
util developer scripts - fix includePath to fit into PAN-OS-PHP project


2.0.0 (20210426)
GENERAL:
* name: pan-os-php
* predefined.xml is at version 8399-6667

UTILS:
* display/manipulate PAN-OS config sections
* introduce support for FAWKES



1.5.16 (20190214)

GENERAL:
* update predefined.xml to 8122-5298
* trait-PathableName.php | improve function toString() to display alternativeName of VSYS
* class-LoopbackInterface | introduce function type()
* class-VirtualRouter | extend function addstaticRouter to create correct XML output
* panos-xml-issue-detector | add validation/fix for duplicate sec/nat rule names
* class-PH/-PanAPIConnector | introduce new argument shadow-ApiKeynoSave - which do not save the API key in the User Home file .panconfkeystore
* class-EthernetIfStore/-EthernetInterface | introduce function addSubintefaceToStore( $subinterface )
* class-SecurityRule | implement scheduler
* class-EthernetInterface/-StaticRouter/-VirtualRouter/ utils interface - add support for IPv6 Addresses